[package]
name = "tyria"
version = "0.0.1"
authors = ["Rafael Medina García <rafamedgar@gmail.com>"]
description = "Wrapper for the Guild Wars 2 API"
homepage = "https://github.com/rmed/tyria-rs"
repository = "https://github.com/rmed/tyria-rs.git"
readme = "README.md"
keywords = ["gw2", "guild wars", "api", "wrapper"]
license = "MIT"

[lib]
name = "tyria"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
hyper = "0.11"
reqwest = "0.6.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
